oidc-agent (1.2.8) UNRELEASED; urgency=medium

  [ Marcus hardt ]
  * Trying to fix debuild messages
  * Updated dependency versions

  [ Gabriel Zachmann ]
  * Fixes dependencies versions
  * adds man pages

  [ Gabriel Zachmann ]
  * Support for Authorization Code Flow
  * Support for Device Flow
  * Support for user defined scopes
  * Couple of minor improvements
  * Couple of bugfixes

  [ Gabriel Zachmann ]
  * Support for providing the device authorization endpoint manually

  [ Gabriel Zachmann ]
  * Removed https://perun.elixir-czech.cz/oidc/ from issuer.config.

  [ Marcus Hardt ]
  * Add IAM of DEEP to issuer.conf
  * Also accept libcurl4 as a dependency

  [ Gabriel Zachmann ]
  * Adds documentation notes on expiring refresh tokens 

  [ Gabriel Zachmann ]
  * Adds possibility to build the C-API as static library
  * oidc-token now uses this library

  [ Gabriel Zachmann ]
  * fixed segmentation fault for an unchecked file existence

  [ Gabriel Zachmann ]
  * Fixes static library 
  * Includes Refactoring
  * Hides client secret
  * Adds optional client name identifier when using dynamic registration
  * Optionally prints the device code url QR-code directly to the terminal

 -- Gabriel Zachmann <gabriel.zachmann@kit.edu>  Thu, 04 Oct 2018 13:44:16 +0200