@@ -21,7 +21,7 @@ int main (int argc, char **argv) {
     }
   }
   if(arguments.args[0]) {
-    char* access_token = getAccessToken(arguments.args[0], arguments.min_valid_period, arguments.scope); // for getting an valid access token just call the api
+    char* access_token = getAccessToken(arguments.args[0], arguments.min_valid_period, arguments.scope); // for getting a valid access token just call the api
     if(access_token==NULL) {
       // fprintf(stderr, "Error: %s\n", oidcagent_serror());
       oidcagent_perror();
