@@ -41,5 +41,7 @@ oidc-agent (1.2.8) UNRELEASED; urgency=medium
   * Hides client secret
   * Adds optional client name identifier when using dynamic registration
   * Optionally prints the device code url QR-code directly to the terminal
+  * Validation for redirect url format
+  * Fixes some typos
 
- -- Gabriel Zachmann <gabriel.zachmann@kit.edu>  Thu, 04 Oct 2018 13:44:16 +0200
+ -- Gabriel Zachmann <gabriel.zachmann@kit.edu>  Fri, 05 Oct 2018 10:15:55 +0200
